[package]
name = "my_strategy"
version = "0.1.0"
authors = ["Slava Shklyaev <slava@slava.sh>"]

[features]
default = []
debug = ["chrono", "fern", "log", "time"]

[dependencies]
lazy_static = "1.0.0"
rand = "0.4.2"
serde = "1.0.13"
serde_derive = "1.0.13"
serde_json = "1.0.13"
chrono = { version = "0.4.1", optional = true }
fern = { version = "0.5.5", optional = true }
log = { version = "0.4.1", optional = true }
time = { version = "0.1.39", optional = true }

[dev-dependencies]
criterion = "0.2.3"

[[bench]]
name = "can_eat_blob"
harness = false

[workspace]
members = [
  "bundler",
]
